fixed passphrase input bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -161,6 +161,7 @@
 }
 
 .inputItem {
+  text-transform: uppercase;
   -webkit-appearance: initial;
   margin: 0 3px;
   font-family: 'Roboto Mono', monospace;
