--- a/src/App.scss
+++ b/src/App.scss
@@ -37,7 +37,8 @@
     display: flex;
     align-items: center;
     margin-top: 20px;
-    img {
+    svg {
+      width: 140px;
       margin-right: 25px;
     }
     .warningTitle {
@@ -63,6 +64,9 @@
     cursor: pointer;
     font-size: 14px;
     color: #c89d22;
+  }
+  &__input {
+    margin-top: 20px;
   }
 }
 .inputContent {
@@ -211,6 +215,7 @@
 .privateKeyDescription {
   display: flex;
   justify-content: space-between;
+  min-height: 63px;
 }
 
 .readQrcodeButton {
@@ -229,11 +234,17 @@
 }
 
 .readQrcodeText {
+  display: flex;
+  align-items: center;
   border: solid 1px #000000;
   border-radius: 4px;
   padding: 4px 10px;
   position: relative;
   bottom: 5px;
+  svg {
+    width: 18px;
+    margin-right: 8px;
+  }
 }
 .intermediate {
   .tip {
@@ -261,6 +272,7 @@
 .intermediateCode {
   position: relative;
   span {
+    align-items: center;
     cursor: pointer;
     display: inline-block;
     position: absolute;
@@ -270,6 +282,11 @@
     border-radius: 4px;
     color: #000000;
     padding: 4px 12px;
+    font-size: 14px;
+    svg {
+      width: 18px;
+      margin-right: 8px;
+    }
   }
 }
 .container {
@@ -277,4 +294,16 @@
 }
 .columns {
   justify-content: space-between;
+}
+.line {
+  width: 100%;
+  height: 1px;
+  background: #707070;
+  margin-top: 80px;
+}
+a {
+  color: #4A83BF;
+  &:hover {
+    color: #4A83BF;
+  }
 }
