--- a/src/App.scss
+++ b/src/App.scss
@@ -37,6 +37,10 @@
     display: flex;
     align-items: center;
     margin-top: 20px;
+
+    @media(max-width: 767px) {
+      flex-direction: column;
+    }
     svg {
       width: 140px;
       margin-right: 25px;
@@ -55,7 +59,7 @@
   }
 }
 .passphrase {
-  margin-top: 40px;
+  // margin-top: 40px;
   &__title {
     display: flex;
     justify-content: space-between;
@@ -67,10 +71,11 @@
   }
   &__input {
     margin-top: 20px;
+    margin-bottom: 20px;
   }
 }
 .inputContent {
-  margin-top: 40px;
+  // margin-top: 14px;
   margin-bottom: 60px;
   .textarea {
     margin-bottom: 20px;
@@ -248,6 +253,7 @@
 }
 .intermediate {
   .tip {
+    margin-bottom: 70px;
     font-size: 16px;
     color: #4e4e4e;
   }
