--- a/src/App.scss
+++ b/src/App.scss
@@ -1,61 +1,17 @@
 
-.header {
-  position: relative;
-  width: 100%;
-  height: 80px;
-  background-color: #ffffff;
-  box-shadow: 0px 4px 3px 0px 
-    rgba(0, 0, 0, 0.06);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  svg {
-    width: 120px;
-    height: 49px;
-  }
-  .github {
-    width: 128px;
-    height: 80px;
-    position: absolute;
-    top: 0;
-    right: 0;
-  }
-}
 
 .content {
   margin-top: 40px;
-  h2 {
-    font-size: 36px;
-    margin-top: 37px;
-    margin-bottom: 23px;
-  }
-  .warning {
-    padding: 20px 20px 25px 30px;
-    background-color: #fffefc;
-    border-radius: 4px;
-    border: solid 2px #e5c875;
-    display: flex;
-    align-items: center;
-    margin-top: 20px;
-
-    @media(max-width: 767px) {
-      flex-direction: column;
-    }
-    svg {
-      width: 140px;
-      margin-right: 25px;
-    }
-    .warningTitle {
-      font-size: 20px;
-      margin-bottom: 12px;
-    }
-    .warningDescription {
-      font-size: 16px;
-      color: #4e4e4e;
-    }
-  }
   @media(max-width: 768px) {
     padding: 0 15px;
+  }
+  h2 {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    a {
+      font-size: 18px;
+    }
   }
 }
 .passphrase {
@@ -67,7 +23,7 @@
   .resetContent {
     cursor: pointer;
     font-size: 14px;
-    color: #c89d22;
+    color: #0c0a03;
   }
   &__input {
     margin-top: 20px;
@@ -95,6 +51,7 @@
   background: #fff;
   text-align: center;
   position: relative;
+  font-size: 20px;
   &::before {
     content: '';
     z-index: -1;
@@ -158,7 +115,7 @@
 .commonDescription {
   margin-top: 5px;
 	font-size: 14px;
-  color: #4e4e4e;
+  color: #1d1d1d;
   margin-bottom: 6px;
 }
 
@@ -251,61 +208,9 @@
     margin-right: 8px;
   }
 }
-.intermediate {
-  .tip {
-    margin-bottom: 70px;
-    font-size: 16px;
-    color: #4e4e4e;
-  }
-}
-.arrowWraper {
-  position: relative;
-  svg {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-}
-.linkWraper {
-  padding-bottom: 30px;
-  h3 {
-    font-size: 18px;
-    margin: 20px 0;
-  }
-}
 
-.intermediateCode {
-  position: relative;
-  span {
-    align-items: center;
-    cursor: pointer;
-    display: inline-block;
-    position: absolute;
-    right: 8px;
-    bottom: 8px;
-    background: #f4f4f4;
-    border-radius: 4px;
-    color: #000000;
-    padding: 4px 12px;
-    font-size: 14px;
-    svg {
-      width: 18px;
-      margin-right: 8px;
-    }
-  }
-}
-.container {
-  max-width: 1000px;
-}
 .columns {
   justify-content: space-between;
-}
-.line {
-  width: 100%;
-  height: 1px;
-  background: #707070;
-  margin-top: 80px;
 }
 a {
   color: #4A83BF;
