--- a/src/index.scss
+++ b/src/index.scss
@@ -17,3 +17,62 @@ body {
 input, textarea {
   font-family: 'Roboto Mono', monospace;
 }
+
+.container {
+  max-width: 1000px;
+}
+h2 {
+  font-size: 36px;
+  margin-top: 37px;
+  margin-bottom: 23px;
+}
+.header {
+  position: relative;
+  width: 100%;
+  height: 80px;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 3px 0px 
+    rgba(0, 0, 0, 0.06);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  svg {
+    width: 120px;
+    height: 49px;
+  }
+  .github {
+    width: 128px;
+    height: 80px;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+}
+
+.line {
+  width: 100%;
+  height: 1px;
+  background: #707070;
+  margin-top: 50px;
+}
+.linkerContent {
+  @media(max-width: 1024px) {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+.linkWraper {
+  padding-bottom: 30px;
+  h3 {
+    font-size: 18px;
+    margin-top: 30px;
+    margin-bottom: 10px;
+  }
+}
+
+.linktext {
+  font-size: 16px;
+  color: #4e4e4e;
+  margin-top: 30px;
+  margin-bottom: 19px;
+}
