--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,3 @@
-
-
 .content {
   margin-top: 40px;
   @media(max-width: 768px) {
@@ -16,9 +14,17 @@
 }
 .passphrase {
   // margin-top: 40px;
-  &__title {
+  &__real {
     display: flex;
     justify-content: space-between;
+  }
+  &__title {
+    &> div {
+      font-size: 14px;
+      // color: #4a83bf;
+      // text-decoration: underline;
+      // cursor: pointer;
+    }
   }
   .resetContent {
     cursor: pointer;
@@ -159,6 +165,7 @@
 }
 
 .symbolInput {
+  position: relative;
   width: 10px;
   border: none;
   margin-right: 0px;
@@ -166,6 +173,16 @@
   text-align: center;
   display: flex;
   justify-content: center;
+  &:before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 10px;
+    height: 2px;
+    background: #d6d6d6;
+  }
   @media(max-width: 768px) {
     align-items: center;
     font-size: 16px;
