delete erc20 coin

--- a/src/App.scss
+++ b/src/App.scss
@@ -181,7 +181,7 @@
     transform: translate(-50%, -50%);
     width: 10px;
     height: 2px;
-    background: #d6d6d6;
+    background: #000000;
   }
   @media(max-width: 768px) {
     align-items: center;
