--- a/src/component/warning.scss
+++ b/src/component/warning.scss
@@ -21,7 +21,7 @@
   .warningDescription {
     font-size: 16px;
     color: #4e4e4e;
-    border-bottom: solid 1px #e4e4e4;
+    // border-bottom: solid 1px #e4e4e4;
     padding-bottom: 16px;
   }
   .network {
