--- a/src/App.scss
+++ b/src/App.scss
@@ -101,6 +101,9 @@
         border-right: 1px solid #ced4da;
       }
     }
+    .input {
+      padding-right: 72px;
+    }
   }
   .popover {
     border: 1px solid #ced4da;
