--- a/src/component/warning.scss
+++ b/src/component/warning.scss
@@ -20,8 +20,8 @@
   }
   .warningDescription {
     font-size: 16px;
-    color: #4e4e4e;
-    // border-bottom: solid 1px #e4e4e4;
+    color: #000000;
+    border-bottom: solid 1px #e4e4e4;
     padding-bottom: 16px;
   }
   .network {
