--- a/src/intermediateGenerate.scss
+++ b/src/intermediateGenerate.scss
@@ -2,7 +2,7 @@
   .tip {
     margin-bottom: 70px;
     font-size: 16px;
-    color: #4e4e4e;
+    color: #000000;
     margin-bottom: 30px;
   }
   &__form {
