--- a/src/intermediateGenerate.scss
+++ b/src/intermediateGenerate.scss
@@ -5,6 +5,21 @@
     color: #000000;
     margin-bottom: 30px;
   }
+  .note {
+    position: relative;
+    font-size: 16px;
+    color: #1d1d1d;
+    background: #fffbef;
+    padding: 12px 0;
+    padding-left: 52px;
+    padding-right: 20px;
+    border-radius: 4px;
+    svg {
+      position: absolute;
+      top: 0;
+      left: 16px;
+    }
+  }
   &__form {
     margin-bottom: 20px;
     overflow: hidden;
