--- a/src/pages/Qrscan/index.scss
+++ b/src/pages/Qrscan/index.scss
@@ -1,16 +1,45 @@
 .cameraWraper {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 280px;
 	background-color: #fafafa;
   border-radius: 8px;
   text-align: center;
   margin-top: 36px;
+  border: 4px solid #FAFAFA;
+  border-radius: 4px;
   .cameraShow {
     width: 260px;
     margin: 0 auto;
   }
 }
+.greenBoder {
+  border-color: #79D06C;
+}
+.lastScan {
+  width: 200px;
+  text-align: left;
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+  right: 68px;
+  &__title {
+    margin-bottom: 8px;
+  }
+  &__content {
+    font-family: 'Roboto Mono', monospace;
+    background:rgba(255,255,255,1);
+    border: 1px solid rgba(230,230,230,1);
+    box-shadow: 0px 3px 6px rgba(0,0,0,0.05);
+    border-radius: 6px;
+    padding: 12px 18px;
+  }
+}
 .cameraNotShow {
+  height: 100%;
   padding-top: 44px;
   padding-bottom: 33px;
   img {
@@ -117,6 +146,7 @@
       padding-top: 14px;
     }
     li {
+      font-family: 'Roboto Mono', monospace;
       text-align: center;
       color: #808080;
       font-size: 20px;
@@ -138,7 +168,7 @@
     li {
       text-align: left;
       font-size: 18px;
-      padding-left: 20px;
+      padding-left: 12px;
       padding-bottom: 21px;
     }
     @media(max-width: 767px) {
@@ -183,4 +213,33 @@
 .flash {
   -webkit-animation-name: flash;
   animation-name: flash;
+}
+@media(max-width: 768px) {
+  .cameraWraper {
+    height: auto;
+  }
+  .cameraShow {
+    width: 100% !important;
+  }
+  .lastScan {
+    border-radius: 8px;
+    padding: 7px 34px;
+    display: flex;
+    width: calc(100% - 30px);
+    margin: 0 auto;
+    top: auto;
+    left: 50%;
+    bottom: 8px;
+    transform: translate(-50%, 0);
+    background: rgba(255,255,255,0.71);
+    border: 1px solid rgba(255,255,255,1);
+    box-shadow: 0px 3px 6px rgba(0,0,0,0.05);
+    &__content {
+      color: rgba(0,0,0,1);
+      background: transparent;
+      border: none;
+      padding: 0;
+      margin-left: 8px;
+    }
+  }
 }
