--- a/src/index.scss
+++ b/src/index.scss
@@ -57,7 +57,6 @@ h2 {
   width: 100%;
   height: 1px;
   background: #707070;
-  margin-top: 50px;
 }
 .linkerContent {
   @media(max-width: 1024px) {
@@ -93,5 +92,13 @@ h2 {
     margin-bottom: 10px;
     font-size:24px;
     font-weight:bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    svg {
+      margin-right: 10px;
+      width: 24px;
+      height: 24px;
+    }
   }
 }
