--- a/src/ClaimSpark.scss
+++ b/src/ClaimSpark.scss
@@ -106,6 +106,7 @@
       opacity: .8;
       padding-top: 15px;
       padding-bottom: 23px;
+      margin-top: 10px;
       svg {
         margin-right: 12px;
       }
