--- a/src/ClaimSpark.scss
+++ b/src/ClaimSpark.scss
@@ -119,6 +119,11 @@
       width: 100%
     }
   }
+  .is-3 {
+    .button {
+      width: 100%;
+    }
+  }
   .is-5 {
     width: 41.66667% !important;
     .button {
