better for mobile

--- a/src/ClaimSpark.scss
+++ b/src/ClaimSpark.scss
@@ -80,6 +80,9 @@
       .balance {
         font-weight: bold;
       }
+      @media(max-width: 767px) {
+        flex-direction: column;
+      }
     }
   }
   &-step2 {
