--- a/src/intermediateGenerate.scss
+++ b/src/intermediateGenerate.scss
@@ -65,7 +65,7 @@
   align-items: center;
   border: 1px solid #dbdbdb;
   border-radius: 6px;
-  box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
+  // box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
   textarea {
     min-width: 200px;
     border: none;
