--- a/src/intermediateGenerate.scss
+++ b/src/intermediateGenerate.scss
@@ -66,6 +66,54 @@
   border: 1px solid #dbdbdb;
   border-radius: 6px;
   // box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
+  .qrcodeWraper {
+    position: absolute;
+    top: -20px;
+    transform: translate(0, -100%);
+    text-align: center;
+    right: -1px;
+    width: 160px;
+    height: 160px;
+    background: #e4c875;
+    z-index: 2;
+    color: #FFFFFF;
+    .qrcodeTop {
+      line-height: 14px;
+      width: 100%;
+      padding: 8px 0;
+      background: #d19a33;
+      font-size: 12px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      .warning-text {
+        font-weight: bold;
+        svg {
+          width: 10px;
+          height: 10px;
+          fill: #FFFFFF;
+          margin-right: 3px;
+        }
+      }
+    }
+    &:after {
+      content: "";
+      position: absolute;
+      left: 50%;
+      bottom: 0;
+      transform: translate(-50%, 100%);
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 14px 12px 0 12px;
+      border-color: #e4c875 transparent transparent transparent;
+    }
+    canvas {
+      border: 2px solid #FFFFFF;
+      margin-top: 10px;
+    }
+  }
   textarea {
     min-width: 200px;
     border: none;
