--- a/src/intermediateGenerate.scss
+++ b/src/intermediateGenerate.scss
@@ -112,6 +112,8 @@
     canvas {
       border: 2px solid #FFFFFF;
       margin-top: 10px;
+      width: 90px;
+      height: 90px;
     }
   }
   textarea {
